  * PEP-8 import ordering.
  * Make the "Choose a picture" page translatable (LP: #892384).
  * Make the "run all pending GTK events" function accessible from
    ubiquity.gtkwidgets, and use it in the test suite.  This makes the test
    suite about four seconds faster.
  * Fix sys.path mishandling in test suite.
  * Mark WPA2-only access points as secure.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 03 Feb 2012 11:40:34 +0000

ubiquity (2.9.16) precise; urgency=low

  * Bump fallback Ubuntu version number in ubi-language to 12.04.
  * Behave a little more usefully when running over ssh with X forwarding
    such that ubiquity is unable to talk to NetworkManager.  This
    configuration isn't actually supported, but is occasionally useful for
    debugging so it helps to be able to start ubiquity at the very least.
  * Configure the target system to disable installation of Recommends if
    base-installer/install-recommends is preseeded to false (LP: #918401).
  * Automatic update of included source packages: flash-kernel 2.28ubuntu39,
    partman-auto 93ubuntu19.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 02 Feb 2012 14:53:26 +0000

ubiquity (2.9.15) precise; urgency=low

  * Cope with stricter dbus.Byte.__str__ implementation in dbus-python 1.0.0
    (LP: #922988).
  * Remove test suite debris on clean.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 30 Jan 2012 14:16:59 +0000

ubiquity (2.9.14) precise; urgency=low

  * src/panel/panel.c: Update indicator ABI to 7. (LP: #922052)

 -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 30 Jan 2012 10:26:07 +0000

ubiquity (2.9.13) precise; urgency=low

  * Make test_osextras reliable across architectures (sort lists).
  * Automatic update of included source packages: netcfg 1.68ubuntu8.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 27 Jan 2012 23:19:26 +0000

ubiquity (2.9.12) precise; urgency=low

  [ Colin Watson ]
  * Drop backports of saved ID handling functions from os, now that we
    require Python 2.7.